@@ -1,6 +1,7 @@
 Revision history for Dancer-Plugin-Preprocess-Less
 
 {{$NEXT}}
+          Added the documentation of plugin settings.
 
 0.010     2014-04-20
           First version, released on an unsuspecting world.
